--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@mui/x-date-pickers-pro": "^6.16.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@smastrom/react-rating": "^1.3.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-image-gallery": "^1.2.1",
     "dayjs": "^1.11.10",
     "example-lib": "^0.1.0",
+    "js-cookie": "^3.0.5",
     "next": "latest",
     "react": "latest",
     "react-accessible-accordion": "^5.0.0",
