--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.47.0",
     "react-image-gallery": "^1.3.0",
     "react-redux": "^9.1.0",
+    "react-to-print": "^2.15.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.11",
     "swiper": "^10.3.1",
