--- a/package.json
+++ b/package.json
@@ -19,13 +19,19 @@
     "@mui/styled-engine-sc": "^5.14.12",
     "@mui/x-date-pickers": "^6.16.1",
     "@mui/x-date-pickers-pro": "^6.16.1",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@smastrom/react-rating": "^1.3.2",
     "@types/js-cookie": "^3.0.6",
     "@types/react-image-gallery": "^1.2.1",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "example-lib": "^0.1.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.9.3",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "next": "latest",
     "react": "latest",
     "react-accessible-accordion": "^5.0.0",
@@ -34,6 +40,7 @@
     "react-hook-form": "^7.47.0",
     "react-image-gallery": "^1.3.0",
     "react-redux": "^9.1.0",
+    "react-to-pdf": "^1.0.1",
     "react-to-print": "^2.15.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.11",
